[gd_scene load_steps=30 format=3 uid="uid://ca1qui65w5ckj"]

[ext_resource type="PackedScene" uid="uid://bg4juqoye2wvi" path="res://UI/In Game UI/MinkiShopPanel.tscn" id="1_1ld0t"]
[ext_resource type="Script" path="res://UI/In Game UI/ui.gd" id="1_1pvg4"]
[ext_resource type="Texture2D" uid="uid://2rfih732dfip" path="res://Assets/heart.png" id="2_q3xfb"]
[ext_resource type="Script" path="res://UI/In Game UI/Resource Panel.gd" id="2_smqts"]
[ext_resource type="Texture2D" uid="uid://b7k4d4uoey1ly" path="res://Assets/money.png" id="3_rrbvd"]
[ext_resource type="PackedScene" uid="uid://b5ddaq3ros3ja" path="res://UI/In Game UI/SpiritIcon.tscn" id="4_xdhk0"]
[ext_resource type="PackedScene" uid="uid://41ht1veq4f77" path="res://Towers/Circle Attacking Minki/IceMinki.tscn" id="5_kdb6q"]
[ext_resource type="Texture2D" uid="uid://dtbt8e2rrnyc4" path="res://Assets/Minki.png" id="6_yx21i"]
[ext_resource type="PackedScene" uid="uid://biw7a1ylgrqcu" path="res://Towers/Default Minki/PurpleMinki.tscn" id="7_03ng4"]
[ext_resource type="PackedScene" uid="uid://crfdqi0d4a3rg" path="res://Towers/Sword Minki/ExperimentalMinki.tscn" id="7_iwc5e"]
[ext_resource type="Texture2D" uid="uid://b8ovdiaq6k32m" path="res://Assets/icon.svg" id="8_2joi5"]
[ext_resource type="Texture2D" uid="uid://b5xso582ggq0r" path="res://Assets/person.png" id="8_lc4wy"]
[ext_resource type="PackedScene" uid="uid://xr1agxks51pu" path="res://Towers/Freezing Minki/FreezingMinki.tscn" id="11_0f5dw"]
[ext_resource type="Texture2D" uid="uid://cvcyxobda58s6" path="res://Assets/snowflake.png" id="12_hu68y"]
[ext_resource type="PackedScene" uid="uid://cnll5myl1ee0f" path="res://UI/Inventory/inventory_panel.tscn" id="13_smvxm"]
[ext_resource type="PackedScene" uid="uid://bfjfakf71xh17" path="res://UI/Inventory/slot.tscn" id="15_6m54n"]
[ext_resource type="Script" path="res://UI/In Game UI/SummonShopButton.gd" id="15_plkbj"]
[ext_resource type="PackedScene" uid="uid://r6cxh7a18mhx" path="res://Towers/Pirate Ship/Boat.tscn" id="15_qcygd"]
[ext_resource type="Texture2D" uid="uid://bxpo5snk1lqlh" path="res://Assets/boat.png" id="16_tn1gh"]
[ext_resource type="PackedScene" uid="uid://dt7g7frv2yrgc" path="res://Towers/Bomb/Bomb.tscn" id="17_yam5r"]
[ext_resource type="Texture2D" uid="uid://bkw8tbismackx" path="res://Assets/evilcannonball.png" id="18_im5oi"]
[ext_resource type="PackedScene" uid="uid://b31o3bbsyybw6" path="res://Towers/Banana Peel/BananaPeel.tscn" id="19_2d2dq"]
[ext_resource type="Texture2D" uid="uid://db1ni8bguqky4" path="res://Assets/bananapeel2.png" id="20_blbsk"]
[ext_resource type="PackedScene" uid="uid://cicbmwxu2hgvv" path="res://Towers/Coconut Tree/CoconutTree.tscn" id="21_mcfdj"]
[ext_resource type="Texture2D" uid="uid://dhg6vqsgolcxv" path="res://Assets/coconut tree.png" id="22_cwkue"]
[ext_resource type="PackedScene" uid="uid://cqd1tnkmqb2pj" path="res://Towers/Grapeshot Minki/GrapeshotMinki.tscn" id="23_jf67w"]
[ext_resource type="Texture2D" uid="uid://bnh6vk0yln7es" path="res://Assets/grapeshot.png" id="24_afwu8"]
[ext_resource type="PackedScene" uid="uid://c5s8d74fila2s" path="res://Towers/Cafe/Cafe.tscn" id="25_ywaxe"]
[ext_resource type="Texture2D" uid="uid://cqnyqd8cx4ndx" path="res://Assets/little cafe.png" id="26_2h3yh"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_1pvg4")

[node name="Resource Panel" type="Panel" parent="."]
offset_left = 900.0
offset_right = 1587.0
offset_bottom = 58.0
script = ExtResource("2_smqts")

[node name="HBoxContainer" type="HBoxContainer" parent="Resource Panel"]
layout_mode = 0
offset_top = 1.0
offset_right = 674.0
offset_bottom = 56.0

[node name="HealthIcon" type="TextureRect" parent="Resource Panel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_q3xfb")
expand_mode = 2

[node name="HealthLabel" type="RichTextLabel" parent="Resource Panel/HBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
text = "250
"
fit_content = true
autowrap_mode = 0

[node name="MoneyIcon" type="TextureRect" parent="Resource Panel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_rrbvd")
expand_mode = 2

[node name="MoneyLabel" type="RichTextLabel" parent="Resource Panel/HBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
text = "1000
"
fit_content = true
autowrap_mode = 0

[node name="SpiritsContainer" type="HBoxContainer" parent="Resource Panel/HBoxContainer"]
layout_mode = 2

[node name="Spirit" parent="Resource Panel/HBoxContainer/SpiritsContainer" instance=ExtResource("4_xdhk0")]
layout_mode = 2

[node name="Spirit2" parent="Resource Panel/HBoxContainer/SpiritsContainer" instance=ExtResource("4_xdhk0")]
layout_mode = 2

[node name="Spirit3" parent="Resource Panel/HBoxContainer/SpiritsContainer" instance=ExtResource("4_xdhk0")]
layout_mode = 2

[node name="Spirit4" parent="Resource Panel/HBoxContainer/SpiritsContainer" instance=ExtResource("4_xdhk0")]
layout_mode = 2

[node name="Spirit5" parent="Resource Panel/HBoxContainer/SpiritsContainer" instance=ExtResource("4_xdhk0")]
layout_mode = 2

[node name="ShopPanel" type="Panel" parent="."]
process_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -540.0
offset_bottom = 540.0
grow_horizontal = 0
grow_vertical = 2

[node name="FlowContainer" type="FlowContainer" parent="ShopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.5
offset_top = -520.0
offset_right = 122.5
offset_bottom = 520.0
grow_horizontal = 2
grow_vertical = 2

[node name="IceMinkiPanel" parent="ShopPanel/FlowContainer" instance=ExtResource("1_1ld0t")]
layout_mode = 2
unit = ExtResource("5_kdb6q")
texture = ExtResource("6_yx21i")

[node name="SwordMinkiPanel" parent="ShopPanel/FlowContainer" instance=ExtResource("1_1ld0t")]
layout_mode = 2
unit = ExtResource("7_iwc5e")
texture = ExtResource("8_2joi5")

[node name="BasicMinkiPanel" parent="ShopPanel/FlowContainer" instance=ExtResource("1_1ld0t")]
layout_mode = 2
unit = ExtResource("7_03ng4")
texture = ExtResource("8_lc4wy")

[node name="FreezeMinkiPanel" parent="ShopPanel/FlowContainer" instance=ExtResource("1_1ld0t")]
layout_mode = 2
unit = ExtResource("11_0f5dw")
texture = ExtResource("12_hu68y")

[node name="PirateShipPanel" parent="ShopPanel/FlowContainer" instance=ExtResource("1_1ld0t")]
layout_mode = 2
unit = ExtResource("15_qcygd")
texture = ExtResource("16_tn1gh")

[node name="BombPanel" parent="ShopPanel/FlowContainer" instance=ExtResource("1_1ld0t")]
layout_mode = 2
unit = ExtResource("17_yam5r")
texture = ExtResource("18_im5oi")

[node name="BananaPanel" parent="ShopPanel/FlowContainer" instance=ExtResource("1_1ld0t")]
layout_mode = 2
unit = ExtResource("19_2d2dq")
texture = ExtResource("20_blbsk")

[node name="CoconutPanel" parent="ShopPanel/FlowContainer" instance=ExtResource("1_1ld0t")]
layout_mode = 2
unit = ExtResource("21_mcfdj")
texture = ExtResource("22_cwkue")

[node name="GrapeshotPanel" parent="ShopPanel/FlowContainer" instance=ExtResource("1_1ld0t")]
layout_mode = 2
unit = ExtResource("23_jf67w")
texture = ExtResource("24_afwu8")

[node name="CafePanel" parent="ShopPanel/FlowContainer" instance=ExtResource("1_1ld0t")]
layout_mode = 2
unit = ExtResource("25_ywaxe")
texture = ExtResource("26_2h3yh")

[node name="InventoryPanel" parent="." node_paths=PackedStringArray("grabbed_slot") instance=ExtResource("13_smvxm")]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -956.0
offset_top = -185.0
offset_right = -264.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
grabbed_slot = NodePath("../InventoryGrabbedSlot")

[node name="InventoryGrabbedSlot" parent="." instance=ExtResource("15_6m54n")]
visible = false
modulate = Color(1, 1, 1, 0.509804)
self_modulate = Color(1, 1, 1, 0)
offset_left = 605.0
offset_top = 894.0
offset_right = 669.0
offset_bottom = 958.0

[node name="AddButton" type="Button" parent="."]
process_mode = 1
offset_left = 577.0
offset_top = 12.0
offset_right = 707.0
offset_bottom = 73.0
text = "Add Spirit"

[node name="removeButton" type="Button" parent="."]
process_mode = 1
offset_left = 730.0
offset_top = 14.0
offset_right = 880.0
offset_bottom = 67.0
text = "Remove Spirit"

[node name="ShopButton" type="Button" parent="."]
process_mode = 1
offset_left = 314.0
offset_top = 21.0
offset_right = 555.0
offset_bottom = 63.0
theme_override_font_sizes/font_size = 24
text = "Empower Shop (0/2)"
script = ExtResource("15_plkbj")

[connection signal="pressed" from="AddButton" to="Resource Panel" method="_on_add_button_pressed"]
[connection signal="pressed" from="removeButton" to="Resource Panel" method="_on_remove_button_pressed"]
[connection signal="pressed" from="ShopButton" to="ShopButton" method="_on_pressed"]
